--- a/public/index.html
+++ b/public/index.html
@@ -2,178 +2,84 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LLM Chat App</title>
+    <title>Shared Chat</title>
     <style>
-      :root {
-        --primary-color: #f6821f;
-        --primary-hover: #e67e22;
-        --light-bg: #f9fafb;
-        --border-color: #e5e7eb;
-        --text-color: #1f2937;
-        --text-light: #6b7280;
-        --user-msg-bg: #fff2e6;
-        --assistant-msg-bg: #f3f4f6;
-      }
-
-      * {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-      }
-
       body {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          Oxygen, Ubuntu, Cantarell, sans-serif;
-        line-height: 1.6;
-        color: var(--text-color);
-        max-width: 800px;
-        margin: 0 auto;
-        padding: 1rem;
+        font-family: system-ui, sans-serif;
+        max-width: 600px;
+        margin: auto;
+        padding: 10px;
       }
-
-      header {
-        text-align: center;
-        margin-bottom: 2rem;
-        padding: 1rem 0;
-        border-bottom: 1px solid var(--border-color);
-      }
-
-      h1 {
-        font-size: 1.5rem;
-        color: var(--primary-color);
-      }
-
-      .chat-container {
-        display: flex;
-        flex-direction: column;
-        height: calc(100vh - 200px);
-        min-height: 400px;
-        border: 1px solid var(--border-color);
-        border-radius: 8px;
-        overflow: hidden;
-      }
-
-      .chat-messages {
-        flex: 1;
+      #chat {
+        border: 1px solid #ddd;
+        height: 400px;
         overflow-y: auto;
-        padding: 1rem;
-        background-color: var(--light-bg);
+        padding: 8px;
+        margin-bottom: 10px;
       }
-
-      .message {
-        margin-bottom: 1rem;
-        padding: 0.75rem;
-        border-radius: 8px;
-        max-width: 80%;
+      .user {
+        font-weight: bold;
       }
-
-      .message p {
-        white-space: pre-line;
-        margin: 0;
-        overflow-wrap: anywhere;
-      }
-
-      .user-message {
-        background-color: var(--user-msg-bg);
-        align-self: flex-end;
-        margin-left: auto;
-      }
-
-      .assistant-message {
-        background-color: var(--assistant-msg-bg);
-        align-self: flex-start;
-      }
-
-      .message-input {
-        display: flex;
-        padding: 0.75rem;
-        border-top: 1px solid var(--border-color);
-        background-color: white;
-      }
-
-      #user-input {
-        flex: 1;
-        padding: 0.75rem;
-        border: 1px solid var(--border-color);
-        border-radius: 4px;
-        font-family: inherit;
-        resize: none;
-        min-height: 44px;
-      }
-
-      #send-button {
-        margin-left: 0.5rem;
-        padding: 0 1rem;
-        background-color: var(--primary-color);
-        color: white;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        transition: background-color 0.2s;
-      }
-
-      #send-button:hover {
-        background-color: var(--primary-hover);
-      }
-
-      #send-button:disabled {
-        background-color: var(--text-light);
-        cursor: not-allowed;
-      }
-
-      .typing-indicator {
-        display: none;
-        font-style: italic;
-        color: var(--text-light);
-        padding: 1rem;
-      }
-
-      .typing-indicator.visible {
-        display: block;
-      }
-
-      footer {
-        margin-top: 1rem;
-        text-align: center;
-        font-size: 0.85rem;
-        color: var(--text-light);
+      .assistant {
+        color: #444;
       }
     </style>
   </head>
   <body>
-    <header>
-      <h1>Branca Chat</h1>
-      <p>Powered by LUDA MOBCHAT EKIPA</p>
-    </header>
+    <h2>Branci chat</h2>
 
-    <div class="chat-container">
-      <div id="chat-messages" class="chat-messages">
-        <div class="message assistant-message">
-          <p>Piši mala</p>
-        </div>
-      </div>
+    <div id="chat"></div>
 
-      <div class="typing-indicator" id="typing-indicator">
-        laed pije pivu...
-      </div>
+    <input id="input" placeholder="Type a message…" />
+    <button onclick="send()">Send</button>
 
-      <div class="message-input">
-        <textarea
-          id="user-input"
-          placeholder="Piši ovđen..."
-          rows="1"
-          autofocus
-        ></textarea>
-        <button id="send-button">Send</button>
-      </div>
-    </div>
+    <script>
+      const chat = document.getElementById("chat");
+      const input = document.getElementById("input");
 
-    <footer>
-      <p>Branca LLM Chat App 2025</p>
-    </footer>
+      // simple nickname
+      let nick = localStorage.getItem("nick");
+      if (!nick) {
+        nick = "guest" + Math.floor(Math.random() * 10000);
+        localStorage.setItem("nick", nick);
+      }
 
-    <!-- Chat app script -->
-    <script src="chat.js"></script>
+      const ws = new WebSocket("wss://chat-app-007.branci-chat.workers.dev");
+      ws.onmessage = (e) => {
+        const data = JSON.parse(e.data);
+
+        if (data.type === "history") {
+          data.messages.forEach(render);
+        }
+
+        if (data.type === "chat") {
+          render(data.message);
+        }
+      };
+
+      function render(msg) {
+        const div = document.createElement("div");
+        div.textContent = `${msg.nick ?? msg.role}: ${msg.content}`;
+        chat.appendChild(div);
+        chat.scrollTop = chat.scrollHeight;
+      }
+
+      function send() {
+        const text = input.value.trim();
+        if (!text) return;
+
+        ws.send(
+          JSON.stringify({
+            type: "chat",
+            role: "user",
+            nick,
+            content: text,
+            time: Date.now(),
+          })
+        );
+
+        input.value = "";
+      }
+    </script>
   </body>
 </html>
